# multi-ai-agent-system

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
agents/: __init__.py  base.py  classifier.py  email_agent.py  json_agent.py  orchestrator.py
memory/: __init__.py  manager.py
sample_files/: sample_email.txt  sample_invoice.json  sample_rfq.json
schema/: models.py
utils/: __init__.py  pdf_processor.py
